attempt to fix buttons that look squished

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -167,7 +167,7 @@ form.item {
 
 button.plus {
 	min-height: 50px;
-	width: 50px;
+	min-width: 50px;
 	border-radius: 50%/50%;
 	border-color: transparent;
 	background-color: #22cbdd;
@@ -343,7 +343,8 @@ button.new-cat-submit {
 
 @media only screen and (max-width: 600px) {
 	button.plus {
-		min-height: 45px;
+		min-height: 40px;
+		min-width: 40px;
 		margin-left: 0px;
 	}
 }
